[project]
name = "introductionoop"
version = "0.1.0"
description = ""
authors = [
    {name = "Tatiana Pitieva",email = "tatyane.liss@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true
warn_unreachable = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|dist)/
  | foo.py
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119


